# solana-program-inspector

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md
examples/: full_analysis.json  risk_report.md
scripts/: deploy_ci.sh  ghidra_plugin.py  update_advisories.py
src/: lib.rs  main.rs
src/advisory/: mod.rs
src/alerting/: mod.rs
src/analyzer/: benchmarks.rs  mod.rs  onchain.rs
src/extractor/: mod.rs  sbf.rs  signatures.db
src/risk/: mod.rs
src/risk/patterns/: upgradeable_programs
src/version/: mod.rs
tests/: integration.rs  test_utils.rs
