[package]
name = "solana-program-inspector"
version = "0.2.0"  # Bumped for new features
edition = "2025"
description = "Security toolkit for reverse engineering Solana programs"
license = "MIT"
repository = "https://github.com/thetruesammyjay/solana-program-inspector"
keywords = ["solana", "security", "reverse-engineering"]
categories = ["blockchain", "security"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
solana-client = "1.16"
solana-program = "1.16"
anchor-lang = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
hex = "0.4"
bs58 = "0.4"
reqwest = { version = "0.11", optional = true, features = ["json"] }
tokio = { version = "1.0", optional = true, features = ["full"] }
lettre = { version = "0.10", optional = true }
mime = "0.3"

[features]
default = []
alerting = ["reqwest", "tokio", "lettre"]
full = ["alerting"]

[dev-dependencies]
solana-program-test = "1.16"
assert_cmd = "2.0"